--- a/src/content/posts/translations/acks-2-chapter-8.mdx
+++ b/src/content/posts/translations/acks-2-chapter-8.mdx
@@ -853,7 +853,7 @@ _От каждого префекта он бы требовал 27 000 золо
 
 Личный авторитет: выражение "Благо тебе, земля, когда царь у тебя из благородного рода" возникло не на пустом месте. Во времена бед и войн, и простой народ и дворяне требуют от лидера силы, чтобы встать на защиту их интересов. Слабых правители ждут отстранение, свержение или смерть. Конечно, "слабый" и "сильный" - понятия относительные и связанные с размером державы. Сильный барон может быть слабым императором. Личный авторитет отражает силу правителя, относительно его владения, и применяется как модификатор к базовому моральному духу. Найдите пересечение уровня правителя с доходом владения в таблице Личного авторитета.
 
-Например: легат Урланд Валериан - воин 8-го уровня с Хар 13, который правит владением с доходом 4450 з в месяц. Найдя пересечение его уровня (8) с доходом (4450 з), Судья видит, что личный авторитет Валериана - 0. Вместе с его бонусом +1 за Харизму, это дает владению базовый моральный дух +1. Если бы легат Валериан погиб, и его жена (обычная женщина 0-го уровня с Хар 16) взяла на себя управление, ее личный авторитет был бы -4, что вкупе с модификатором +2 за Хар, дало бы базовый моральный дух -2. (При условии, что она останется у власти, опыт от управления владением позволит ей увеличивать уровень, пока она не достигнет личного авторитета 0.)
+Например: легат Урланд Валериан - воин 8-го уровня с Хар 13, который правит владением с доходом 4450 зм в месяц. Найдя пересечение его уровня (8) с доходом (4450 з), Судья видит, что личный авторитет Валериана - 0. Вместе с его бонусом +1 за Харизму, это дает владению базовый моральный дух +1. Если бы легат Валериан погиб, и его жена (обычная женщина 0-го уровня с Хар 16) взяла на себя управление, ее личный авторитет был бы -4, что вкупе с модификатором +2 за Хар, дало бы базовый моральный дух -2. (При условии, что она останется у власти, опыт от управления владением позволит ей увеличивать уровень, пока она не достигнет личного авторитета 0.)
 
 Модификатор морального духа за уровень
 
@@ -883,7 +883,7 @@ _От каждого префекта он бы требовал 27 000 золо
 
 Классификация владения: владения на границах цивилизации менее управляемы и склонны к неподчинению, неуважению к властям и беззаконию. Пограничные владения получают штраф -1 к базовому значению морального духа, а запредельные владения - штраф -2 к базовому значению морали. Эти штрафы можно компенсировать дополнительными войсками.
 
-Дополнительные войска: сильный гарнизон может уменьшить беззаконность пограничных и запредельных владений. Пограничное владение получает бонус +1 к моральному духу, если в пределах владения расквартированы дополнительные войска ценностью в 1 з на крестьянскую семью. Запредельное владение получает бонус +1 к моральному духу, если в пределах владения расквартированы дополнительные войска ценностью в 1 з на крестьянскую семью и +2 если в пределах владения расквартированы дополнительные войска ценностью в 2 з на крестьянскую семью.
+Дополнительные войска: сильный гарнизон может уменьшить беззаконность пограничных и запредельных владений. Пограничное владение получает бонус +1 к моральному духу, если в пределах владения расквартированы дополнительные войска ценностью в 1 зм на крестьянскую семью. Запредельное владение получает бонус +1 к моральному духу, если в пределах владения расквартированы дополнительные войска ценностью в 1 зм на крестьянскую семью и +2 если в пределах владения расквартированы дополнительные войска ценностью в 2 зм на крестьянскую семью.
 
 Мировоззрение и религия: жители державы не могут напрямую определить мировоззрение своего правителя, поэтому делают это основе религии, которую он открыто практикует. Владение считается законным, если в основном населено людьми и полулюдьми, которые поклоняются законным богам. В сеттинге Ауранской империи это будет сама Ауранская империя, Северный Арголл, Рорн и Сомирея. Владение считается хаотичным, если в основном населено зверолюдами или любыми существами, которые поклоняются хаотичным богам. В сеттинге Ауранской империи это будет Кельдорея и Кемеш (Ютландия и Скайсостан, будучи приверженцами шаманизма, нейтральны). Религия владения (а значит его мировоззрение) может быть изменена правителем, но сделать это непросто - см. Насаждение новой религии, ниже.
 
@@ -902,26 +902,26 @@ _От каждого префекта он бы требовал 27 000 золо
 |  12+ |Моральный дух повышается на 2 (макс. +4)|
 
 
-|События месяца|                                           Модификаторы броска|
-|--------------|-------------------------------------------------------------:|
-|Траты на гарнизон в этом месяце ниже 2 зм на семью| -1 за недостающий золотой|
-|Вражеская армия вторглась и оккупировала владение |  0, затем -1 каждый месяц|
-|Владение разграблено вражеской армией                      | -4              |
-|1 зм на семью в войсках, подавляющих владение в этом месяце| +1\*            |
-|2 зм на семью в войсках, подавляющих владение в этом месяце| +2\*            |
-|Дополнительные войска, подавляющий владение в этом месяце  | +1\# за превышающий золотой|
-|Затраты на празднования выше 1 зм на семью в этом месяце   | +1/за превышающий золотой|
-|Затраты на празднования ниже 1 зм на семью в этом месяце   | -1 за недостающий золотой|
-|Налоги в этом месяце выше 2 зм на семью                    | -1 за превышающий золотой|
-|Налоги в этом месяце ниже 2 зм на семью                    | +1 за недостающий золотой|
-|Десятина в этом месяце не выплачена                        | -1                       |
-|В этом месяце правитель вводит или продолжает поклонение богу иного мировоззрения|-4|
-|В этом месяце правитель продолжает поклонение богу иного мировоззрения           |-2|
-|Правитель лично управляет владением                                              |+1|
-|Во владении произошло бедствие                                            |Различный|
+| События месяца                                                                    | Модификаторы броска         |
+| --------------------------------------------------------------------------------- | :-------------------------- |
+| Траты на гарнизон в этом месяце ниже 2 зм на семью                                | -1 за недостающий золотой   |
+| Вражеская армия вторглась и оккупировала владение                                 | 0, затем -1 каждый месяц    |
+| Владение разграблено вражеской армией                                             | -4                          |
+| 1 зм на семью в войсках, подавляющих владение в этом месяце                       | +1\*                        |
+| 2 зм на семью в войсках, подавляющих владение в этом месяце                       | +2\*                        |
+| Дополнительные войска, подавляющий владение в этом месяце                         | +1\# за превышающий золотой |
+| Затраты на празднования выше 1 зм на семью в этом месяце                          | +1/за превышающий золотой   |
+| Затраты на празднования ниже 1 зм на семью в этом месяце                          | -1 за недостающий золотой   |
+| Налоги в этом месяце выше 2 зм на семью                                           | -1 за превышающий золотой   |
+| Налоги в этом месяце ниже 2 зм на семью                                           | +1 за недостающий золотой   |
+| Десятина в этом месяце не выплачена                                               | -1                          |
+| В этом месяце правитель вводит или продолжает поклонение богу иного мировоззрения | -4                          |
+| В этом месяце правитель продолжает поклонение богу иного мировоззрения            | -2                          |
+| Правитель лично управляет владением                                               | +1                          |
+| Во владении произошло бедствие                                                    | Различный                   |
 
-|* Текущий моральный дух при подавлении населения значение морального духа не может превышать 0|
-|---|
+| * Текущий моральный дух при подавлении населения значение морального духа не может превышать 0 |
+| ---------------------------------------------------------------------------------------------- |
 
 Вторжение и оккупация: при вторжении владение не получает немедленных штрафов к броску морального духа. Как доказали бесчисленные войны на протяжении истории, люди зачастую весьма упрямо и стойко защищают свои дома. Однако, если количество вторгнувшихся войск достаточно велико, чтобы считаться оккупационным гарнизоном (см. "Вторжение, завоевание, оккупация и грабеж" на стр. ХХ) и оккупационная армия остается во владении дольше месяца, владение начинает получать накапливаемый штраф -1 в месяц к каждому броску морального духа, до максимума -4.
 
@@ -937,15 +937,15 @@ _От каждого префекта он бы требовал 27 000 золо
 
 Бедствия: в процессе игры владение может столкнуться с различными превратностями и катастрофами, от эпидемий до землетрясений или магического превращения земель в настоящий ад (как это случилось в Детройте, штат Мичиган). Судья может назначить штраф к броскам морального духа владения, зависящий от произошедшей катастрофы. Несерьезное бедствие, которое наносит ущерб собственности, налагает штраф -1. Серьезное бедствие, которое наносит серьезный урон собственности и лишает жизни, налагает штраф от -2 до -3. Полная катастрофа (такая, как катаклизм или ритуал мор) налагает штраф -4. (Учитывая, что следить за всеми потопами, засухами и эпидемиями во владениях ПСов, и учитывая что исторически бедствия были широко распространены, Судья , при желании, может просто предположить, что владения ПМов получают штраф -1).
 
-Пример: Марк, законный воин 9-го уровня с ХАР 13, правит владением с населением 1200 семей и доходом 14000 з в месяц. Это дает ему модификатор личной власти 0. У него есть твердыня со стандартной ценностью. Его гарнизон из 40 тяжелых всадников обходится в 2400 з - минимальная требуемая сумма. Его владение находится в Ауранской империи и его люди, как и Марк, поклоняются Эмпирейским бога, так что модификатора за религию нет. Таким образом, базовое значение морального духа его владения +1 (Верный). После нескольких месяцев хорошего правления, текущее значение морального духа владения стало равно +2.
+Пример: Марк, законный воин 9-го уровня с ХАР 13, правит владением с населением 1200 семей и доходом 14 000 зм в месяц. Это дает ему модификатор личной власти 0. У него есть твердыня со стандартной ценностью. Его гарнизон из 40 тяжелых всадников обходится в 2 400 зм - минимальная требуемая сумма. Его владение находится в Ауранской империи и его люди, как и Марк, поклоняются Эмпирейским бога, так что модификатора за религию нет. Таким образом, базовое значение морального духа его владения +1 (Верный). После нескольких месяцев хорошего правления, текущее значение морального духа владения стало равно +2.
 
-Однако, случайно надев шлем изменения мировоззрения, Макр становится хаотичным и начинает поклоняться хтоническим богам. Его новое мировоззрение уменьшает базовое значение морального духа на 2, до -1. Это изменение базового морального духа снижает текущий моральный дух с +2 до 0. Что еще хуже, ставший злодеем Марк, решает, что пора начать править владением железной рукой. Он не платит десятину (-1) и поднимает налоги с 2 з до 4 з с крестьянина (-2). К концу месяца он делает бросок морального духа 2к6-3 на верность своего владения. Выпадает 5 и с модификаторами получается 2. Это означает, что текущий моральный дух владения падает на 2 очка, с 0 до -2 (Неспокойный).
+Однако, случайно надев шлем изменения мировоззрения, Макр становится хаотичным и начинает поклоняться хтоническим богам. Его новое мировоззрение уменьшает базовое значение морального духа на 2, до -1. Это изменение базового морального духа снижает текущий моральный дух с +2 до 0. Что еще хуже, ставший злодеем Марк, решает, что пора начать править владением железной рукой. Он не платит десятину (-1) и поднимает налоги с 2 зм до 4 зм с крестьянина (-2). К концу месяца он делает бросок морального духа 2к6-3 на верность своего владения. Выпадает 5 и с модификаторами получается 2. Это означает, что текущий моральный дух владения падает на 2 очка, с 0 до -2 (Неспокойный).
 
-В следующем месяце Марк решает отправить весь свой гарнизон из 60 тяжелых всадников подавлять население владения. На дополнительные 2400 з, полученные с налогов, он вербует еще 40 наемных тяжелых всадников, которые тоже занимаются подавлением. Моральный дух владения изменяется на +2 потому что весь гарнизон подавляет крестьян и еще на +2 за дополнительные войска на сумму в 2 з на семью, которые подавляют крестьян. Он все также не платит десятину (-1) и продолжает собирать высокие налоги (-2). К концу месяца он делает бросок морального духа 2к6+4-3 на верность своего владения; результат: 8. Текущий моральный дух владения сдвигается на один пункт к базовому моральному духу -1. Если бы Марк не отправил войска подавлять крестьян, результат броска был бы 4 и текущий моральный дух владения упал бы на один пункт с -2 до -3.
+В следующем месяце Марк решает отправить весь свой гарнизон из 60 тяжелых всадников подавлять население владения. На дополнительные 2400 з, полученные с налогов, он вербует еще 40 наемных тяжелых всадников, которые тоже занимаются подавлением. Моральный дух владения изменяется на +2 потому что весь гарнизон подавляет крестьян и еще на +2 за дополнительные войска на сумму в 2 зм на семью, которые подавляют крестьян. Он все также не платит десятину (-1) и продолжает собирать высокие налоги (-2). К концу месяца он делает бросок морального духа 2к6+4-3 на верность своего владения; результат: 8. Текущий моральный дух владения сдвигается на один пункт к базовому моральному духу -1. Если бы Марк не отправил войска подавлять крестьян, результат броска был бы 4 и текущий моральный дух владения упал бы на один пункт с -2 до -3.
 
-Марк решает изменить подход. Он опять снижает налоги до 2 з с семьи (0). Он вводит во владении Хтоническую веру (-4), которой начинает платит десятину (0), но тратит еще 2 з на крестьянскую семью на празднования, которые знакомят их с новой религией (+2). Он продолжает подавлять недовольных гарнизоном и наемниками (+4). Он бросает 2к6+6-4 и получает 9. Текущий моральный дух владения увеличивается до 0.
+Марк решает изменить подход. Он опять снижает налоги до 2 зм с семьи (0). Он вводит во владении Хтоническую веру (-4), которой начинает платит десятину (0), но тратит еще 2 зм на крестьянскую семью на празднования, которые знакомят их с новой религией (+2). Он продолжает подавлять недовольных гарнизоном и наемниками (+4). Он бросает 2к6+6-4 и получает 9. Текущий моральный дух владения увеличивается до 0.
 
-Чтобы обратить крестьян своих владений в новую веру, он должен поднять моральный дух до Преданного (+2). Однако, моральный дух владения не может быть выше 0, если население подавляется. Потому Марк увольняет наемников и приказывает кавалерии вернуться в бараки. Он сохраняет налоги в 2 з с крестьянской семьи (0), продолжает проповедовать Хтоническую веру (-2) и повышает затраты на празднества до 5 з на крестьянскую семью (+5). Он бросает 2к6+5-2 и получает 10. Теперь текущий моральный дух его владения повышается до +1.
+Чтобы обратить крестьян своих владений в новую веру, он должен поднять моральный дух до Преданного (+2). Однако, моральный дух владения не может быть выше 0, если население подавляется. Потому Марк увольняет наемников и приказывает кавалерии вернуться в бараки. Он сохраняет налоги в 2 зм с крестьянской семьи (0), продолжает проповедовать Хтоническую веру (-2) и повышает затраты на празднества до 5 зм на крестьянскую семью (+5). Он бросает 2к6+5-2 и получает 10. Теперь текущий моральный дух его владения повышается до +1.
 
 Если Марк в конечном итоге сможет поднять моральный дух владения до Преданного (+4), это будет значить, что он успешно привнес во владение новую религию и обратил его в свое мировоззрение. Это увеличит базовый моральный дух до +1 и снимет постоянный штраф -2 к броскам морального духа.
 
@@ -953,17 +953,17 @@ _От каждого префекта он бы требовал 27 000 золо
 
 Влияние текущего морального духа владения на то, как оно функционирует, описано ниже.
 
-|Значение морального духа|Уровень морального духа|
-|--:|---|
-| -4 и менее | Бунтующий|
-| -3|         Непокорное|
-| -2|        Неспокойное|
-| -1|   Деморализованное|
-|  0|       Безразличное|
-| +1|             Верное|
-| +2|          Преданное|
-| +3|      Непоколебимое|
-| +4 и более |   Стойкое|
+| Значение морального духа | Уровень морального духа |
+| -----------------------: | ----------------------- |
+|               -4 и менее | Бунтующий               |
+|                       -3 | Непокорное              |
+|                       -2 | Неспокойное             |
+|                       -1 | Деморализованное        |
+|                        0 | Безразличное            |
+|                       +1 | Верное                  |
+|                       +2 | Преданное               |
+|                       +3 | Непоколебимое           |
+|               +4 и более | Стойкое                 |
 
 Бунтующее владение восстает против своего правителя. Все броски по таблицам Превратностей получают штраф -20. Все броски верности вассалов получают штраф -2 из-за неустойчивости власти сеньора. Прироста населения нет и в месяц дополнительно 4к10 семей на тысячу теряются за счет болезней, гибели и эмиграции. Сбор рекрутов и ополчения невозможен. Трудоспособные мужчины (по одному на семью) становятся бандитами и начинают нападать на чиновников, торговые караваны, войска и путешественников. Из-за отсутствия рабочих доход с налогов, земли, ремесел и услуг во владении падает до нуля. Каждый месяц существует 10% накапливающийся шанс, что в рядах бандитов появится ПС, который бросит вызов правителю. Этот ПС будет достаточно уровня, чтобы иметь личный авторитет +0.
 
@@ -995,14 +995,14 @@ _От каждого префекта он бы требовал 27 000 золо
 
 Основание поселений
 
-|Общие Инвестиции (зм) |Максимальное Население (семьи)|
-|---------------------:|----------:|
-|            10 000    |    249    |
-|            25 000    |    624    |
-|            75 000    |  2 499    |
-|           200 000    |  4 999    |
-|           625 000    | 19 999    |
-|         2,500,000    |100 000    |
+| Общие Инвестиции (зм) | Максимальное Население (семьи) |
+| --------------------: | -----------------------------: |
+|                10 000 |                            249 |
+|                25 000 |                            624 |
+|                75 000 |                          2 499 |
+|               200 000 |                          4 999 |
+|               625 000 |                         19 999 |
+|             2 500 000 |                        100 000 |
 
 Когда владение достигает пределов роста, его правитель обычно присваивает дополнительный участок земли, чтобы позволить населению расти дальше. Вместо этого (или в дополнение к этому), он может решить создать в своем владении городское поселение. Чтобы основать городское поселение, правитель должен сделать первичное вложение размером в 10000 з, а затем переселить от 75 до 249 крестьянских семей из владения в городское поселение.
 
@@ -1018,24 +1018,24 @@ _От каждого префекта он бы требовал 27 000 золо
 
 Получение доходов
 
-|Поселение Население (семьи)|Доход С торговли (зм/семью)|Класс Рынка|
-|----------------|:-:|---------|
-|    75 -     249|  1|Класс VI |
-|   250 -     499|1,5|Класс V  |
-|   500 -   2 499|1,5|Класс IV |
-| 2 500 -   4 999|1,5|Класс III|
-| 5 000 -  19 999|  2|Класс II |
-|20 000 - 100 000|2,5|Класс I  |
+| Поселение Население (семьи) | Доход С торговли (зм/семью) | Класс Рынка |
+| --------------------------- | :-------------------------: | ----------- |
+| 75 -     249                |              1              | Класс VI    |
+| 250 -     499               |             1,5             | Класс V     |
+| 500 -   2 499               |             1,5             | Класс IV    |
+| 2 500 -   4 999             |             1,5             | Класс III   |
+| 5 000 -  19 999             |              2              | Класс II    |
+| 20 000 - 100 000            |             2,5             | Класс I     |
 
 Каждый месяц правитель собирает причитающиеся ему доходы с каждой городской семьи в своих владениях. Как и крестьянские семьи, городские семьи создают доход в 4 зм в виде услуг и 2 зм в виде налогов. (Если владение взымает более высокие или более низкие, они применяются и к городскому поселению.) Вместо ценности земли, городские семьи создают торговый доход, представляющий собой налоги, сборы, взносы, пошлины и прочие отчисления местных жителей и приезжих правителю. Торговый доход начинается с 1 зм с семьи в месяц и увеличивается с ростом размеров поселения. Правитель также может использовать городское поселение в качестве рынка. У каждого городского поселения есть класс рынка, который зависит от его размеров. Подробности о рынках см. в разделе "Деловые предприятия".
 
-|Выплаты|Ежемесячные затраты|
-|-------|-------------------|
-|Гарнизон    |  2 зм с семьи|
-|Праздники   |  1 зм с семьи|
-|Десятина    |  1 зм с семьи|
-|Обслуживание|  1 зм        |
-|Дань        |Различный     |
+| Выплаты      | Ежемесячные затраты |
+| ------------ | ------------------- |
+| Гарнизон     | 2 зм с семьи        |
+| Праздники    | 1 зм с семьи        |
+| Десятина     | 1 зм с семьи        |
+| Обслуживание | 1 зм                |
+| Дань         | Различный           |
 
 Затраты поселения подобные затратам владения. Каждый месяц правитель должен оплачивать гарнизон в размере 2 зм на городскую семью, затраты на праздники в размере 1 зм на городскую семью, затраты на обслуживание в размере 1 зм на городскую семь и десятину в размере 1 зм на городскую семью. Если правитель платит больше или меньше за праздники во владении, те же значения применяются к городскому поселению.
 
@@ -1073,5 +1073,6 @@ _От каждого префекта он бы требовал 27 000 золо
 |Большой город (15000-19999)| 45 000 -  69 999 зм| Класс II  |
 |Мегаполис (20000-39999)    | 70 000 - 139 999 зм| Класс I   |
 |Мегаполис (40000+)         |140 000+            | Класс I   |
-|\* Рынок VI класса только в твердыне владения|
-|---|
+
+| \* Рынок VI класса только в твердыне владения |
+| --------------------------------------------- |
