--- a/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
+++ b/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
@@ -4,7 +4,7 @@ description: ПЕРЕВОД статьи Эда Гринвуда про поме
 date: 2025-02-05
 tags:
   - Забытые Королевства
-  - Эд Гринвуд
+  - Ed Greenwood
   - Перевод
 author: Ed Greenwood
 ---
