--- a/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
+++ b/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
@@ -1,5 +1,5 @@
 ---
-title: Встречайте нурлерта
+title: Встречайте нурлрета
 description: ПЕРЕВОД статьи Эда Гринвуда про помесь драйдера с иллитидом
 date: 2025-02-05
 tags:
