--- a/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
+++ b/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
@@ -1,6 +1,6 @@
 ---
 title: Встречайте нурлрета
-description: ПЕРЕВОД статьи Эда Гринвуда про помесь драйдера с иллитидом
+description: ПЕРЕВОД статьи Эда Гринвуда про помесь драйдера с иллитидом в Забытых Королевствах - нурлрета, который обладает способностями как драйдера так и иллитида, и помимо этого имеет ряд уникальных способностей - вроде иммунитета к силовому урону и возможности изучать заклинания поедая мозги арканических заклинателей.
 date: 2025-02-05
 tags:
   - Забытые Королевства
