--- a/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
+++ b/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
@@ -23,9 +23,9 @@ author: Ed Greenwood
 
 Как и драйдер, нурлрет имеет крупное тело арахнида с вертикально торчащим спереди туловищем дроу, но на этом туловище скрывается блестящая слизисто-фиолетовая шкура иллитида, а на безволосой голове четыре щупальца, торчащие изо рта. Эти щупальца очень похожи на щупальца «обычных» пожирателей разума, но могут увеличиваться в длину от длины туловища до десяти футов за пределы окружности ног арахнида.
 
-Нурлрет обладает всеми способностями и свойствами драйдера (такими как отравленный укус и происхождение от фей, врожденные способности к заклинаниям, паукообразное лазание, хождение по паутине и, да, чувствительность к солнечному свету), а также всеми способностями пожирателя разума, кроме способности извлекать мозг или созжавать и имплантировать головастиков (поэтому они могут хватать своими щупальцами, обнаруживать мысли, взрывать разум, доминировать над монстром, перемещаться по планам и так далее). Нурлреты - к счастью для всех остальных - одиночные существа, вступающие в связь с другими только в том случае, если эти другие - обманщики, пленники в клетке или заточении. К еще большему счастью, они не могут размножаться!
+Нурлрет обладает всеми способностями и свойствами драйдера (такими как отравленный укус и происхождение от фей, врожденные способности к заклинаниям, паукообразное лазание, хождение по паутине и, да, чувствительность к солнечному свету), а также всеми способностями пожирателя разума, кроме способности извлекать мозг или создавать и имплантировать головастиков (поэтому они могут хватать своими щупальцами, обнаруживать мысли, взрывать разум, доминировать над монстром, перемещаться по планам и так далее). Нурлреты - к счастью для всех остальных - одиночные существа, вступающие в связь с другими только в том случае, если эти другие - обманщики, пленники в клетке или заточении. К еще большему счастью, они не могут размножаться!
 
-При слиянии нурлретов создаются магические связки, которые поглощают магические снаряды и другие магические эффекты, наносящие силовой урон, чтобы зарядить и омолодить себя, так что нурлрет не получает никакого урона. Эти же связки медленно излечивают все повреждения, полученные нурлретом, и в конце каждого часа они восстанавливают 1 хп.
+При слиянии нурлретов создаются магические связки, которые поглощают магические снаряды и другие магические эффекты, наносящие силовой урон, чтобы зарядить и омолодить себя, так что нурлрет не получает никакого урона. Эти же связки медленно излечивают все повреждения, полученные нурлретом, и в конце каждого часа они восстанавливают 1 хит.
 
 Нурлрет также обладает очень редкой способностью: Если они сожрут часть сырого мозга Одаренного существа (то есть человека или другого арканического заклинателя, который творит заклинания путем изучения и запоминания, а не врожденно, как чародей или существо, которое может излучать магический эффект в силу своей природы), и у этого существа есть запомненные заклинания, нурлрет мгновенно получает способность сотворять заклинания, одной лишь волей (не требуются вербальные, соматические или материальные компоненты), все эти запомненные заклинания на уровне [ячейка заклинания], запомненном в этом пожираемом мозге, отныне.
 
