Fix ё in meet-the-nurleth

--- a/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
+++ b/src/content/posts/forgotten-realms/meet-the-nurlreth.mdx
@@ -17,27 +17,27 @@ author: Ed Greenwood
 
 Я говорю о Нурлрете.
 
-О чем? О ком?
+О чём? О ком?
 
-Нурлрет - это драйдеры, скрещенные с иллитидами - магически сплавленные, а не скрещенные, - и их выпускают в широкий мир Владыки с врожденной и тайной миссией, которую они должны выполнить, хотя часто такие миссии имеют «точки запуска» в будущем; то есть конкретный нурлрет не начнет пытаться выполнить свою миссию до какого-то более позднего времени или определенного события (например, смерти определенного правителя или другого могущественного существа). По всей видимости, он может даже не знать, в чем заключается его миссия, пока не произойдет событие или не наступит время.
+Нурлрет - это драйдеры, соединённые с иллитидами - магически сплавленные, а не скрещенные, - и их выпускают в широкий мир Владыки с врождённой и тайной миссией, которую они должны выполнить, хотя часто такие миссии имеют «точки запуска» в будущем; то есть конкретный нурлрет не начнёт пытаться выполнить свою миссию до какого-то более позднего времени или определенного события (например, смерти определённого правителя или другого могущественного существа). По всей видимости, он может даже не знать, в чём заключается его миссия, пока не произойдет событие или не наступит время.
 
 Как и драйдер, нурлрет имеет крупное тело арахнида с вертикально торчащим спереди туловищем дроу, но на этом туловище скрывается блестящая слизисто-фиолетовая шкура иллитида, а на безволосой голове четыре щупальца, торчащие изо рта. Эти щупальца очень похожи на щупальца «обычных» пожирателей разума, но могут увеличиваться в длину от длины туловища до десяти футов за пределы окружности ног арахнида.
 
-Нурлрет обладает всеми способностями и свойствами драйдера (такими как отравленный укус и происхождение от фей, врожденные способности к заклинаниям, паукообразное лазание, хождение по паутине и, да, чувствительность к солнечному свету), а также всеми способностями пожирателя разума, кроме способности извлекать мозг или создавать и имплантировать головастиков (поэтому они могут хватать своими щупальцами, обнаруживать мысли, взрывать разум, доминировать над монстром, перемещаться по планам и так далее). Нурлреты - к счастью для всех остальных - одиночные существа, вступающие в связь с другими только в том случае, если эти другие - обманщики, пленники в клетке или заточении. К еще большему счастью, они не могут размножаться!
+Нурлрет обладает всеми способностями и свойствами драйдера (такими как отравленный укус и происхождение от фей, врожденные способности к заклинаниям, паукообразное лазание, хождение по паутине и, да, чувствительность к солнечному свету), а также всеми способностями пожирателя разума, кроме способности извлекать мозг или создавать и имплантировать головастиков (поэтому они могут хватать своими щупальцами, обнаруживать мысли, взрывать разум, доминировать над монстром, перемещаться по планам и так далее). Нурлреты - к счастью для всех остальных - одиночные существа, вступающие в связь с другими только в том случае, если эти другие - обманщики, пленники в клетке или заточении. К ещё большему счастью, они не могут размножаться!
 
 При слиянии нурлретов создаются магические связки, которые поглощают магические снаряды и другие магические эффекты, наносящие силовой урон, чтобы зарядить и омолодить себя, так что нурлрет не получает никакого урона. Эти же связки медленно излечивают все повреждения, полученные нурлретом, и в конце каждого часа они восстанавливают 1 хит.
 
-Нурлрет также обладает очень редкой способностью: Если они сожрут часть сырого мозга Одаренного существа (то есть человека или другого арканического заклинателя, который творит заклинания путем изучения и запоминания, а не врожденно, как чародей или существо, которое может излучать магический эффект в силу своей природы), и у этого существа есть запомненные заклинания, нурлрет мгновенно получает способность сотворять заклинания, одной лишь волей (не требуются вербальные, соматические или материальные компоненты), все эти запомненные заклинания на уровне [ячейка заклинания], запомненном в этом пожираемом мозге, отныне.
+Нурлрет также обладает очень редкой способностью: Если они сожрут часть сырого мозга Одарённого существа (то есть человека или другого арканического заклинателя, который творит заклинания путем изучения и запоминания, а не врожденно, как чародей или существо, которое может излучать магический эффект в силу своей природы), и у этого существа есть запомненные заклинания, нурлрет мгновенно получает способность сотворять заклинания, одной лишь волей (не требуются вербальные, соматические или материальные компоненты), все эти запомненные заклинания на уровне [ячейки заклинания], запомненном в этом пожираемом мозге, отныне.
 
-Когда Нурлрет сотворяет такое заклинание, он не может повторить это заклинание в течение 24 часов с момента сотворения. (Обратите внимание, что, не имея возможности извлекать мозг через свои щупальца, нурлрет вынужден добывать его более жестокими способами. Такие мозги не обязательно должны быть целыми, но они должны быть не прожаренными - в них могут попасть молния или кислота, но не огонь или сильный жар, и нурлат должен сожрать как минимум шестую часть всего мозга, чтобы получить хоть какое-то заклинание).
+Когда Нурлрет сотворяет такое заклинание, он не может повторить это заклинание в течение 24 часов с момента сотворения. (Обратите внимание, что, не имея возможности извлекать мозг через свои щупальца, нурлрет вынужден добывать его более жестокими способами. Такие мозги не обязательно должны быть целыми, но они должны быть не прожаренными - в них могут попасть молния или кислота, но не огонь или сильный жар, и нурлет должен сожрать как минимум шестую часть всего мозга, чтобы получить хоть какое-то заклинание).
 
 Эльминстер рассказал мне, что встречались нурлреты, у которых в памяти был довольно широкий список заклинаний, как будто они специально выслеживали и убивали Волшебников.
 
-Все эти сведения, которые я здесь излагаю, получены непосредственно от Эльминстера, и он смог поделиться со мной некоторыми намеками и несколькими подтверждениями относительно миссий, заложенных в мозг нурлретов Мастерами Абсолютного Согласия, которые создают их и отправляют в путь. От этих миссий нурлрет не может отказаться; их выполнение отменяет все остальное, включая любые инстинкты и мысли о самосохранении. Большинство тех, кто вообще слышал о Мастерах, считают их безумцами и полагают, что их цели, а также задания и миссии, которые они поручают нурлретам и членам Ордена Синего Огня, не имеют смысла, хаотичны и даже противоречат друг другу, но такие взгляды ошибочны.
+Все эти сведения, которые я здесь излагаю, получены непосредственно от Эльминстера, и он смог поделиться со мной некоторыми намёками и несколькими подтверждениями относительно миссий, заложенных в мозг нурлретов Мастерами Абсолютного Согласия, которые создают их и отправляют в путь. От этих миссий нурлрет не может отказаться; их выполнение отменяет всё остальное, включая любые инстинкты и мысли о самосохранении. Большинство тех, кто вообще слышал о Мастерах, считают их безумцами и полагают, что их цели, а также задания и миссии, которые они поручают нурлретам и членам Ордена Синего Огня, не имеют смысла, хаотичны и даже противоречат друг другу, но такие взгляды ошибочны.
 
-Точно так же, как Мистра и Азут стремятся содействовать широкому распространению арканной магии для всех, Мастера стремятся распространить использование, влияние и «запятнанность» искаженных после Чумы Заклинаний, или «диких» магий, чтобы новые существа становились чумными и заклятыми, даже спустя столько времени после начала Чумы Заклинаний, и чтобы сотворяли заклинания или высвобождали магии, способствующие хаосу, все еще пульсирующему в Плетении после того катаклизма.
+Точно так же, как Мистра и Азут стремятся содействовать широкому распространению арканной магии для всех, Мастера стремятся распространить использование, влияние и «запятнанность» искаженных после Чумы Заклинаний, или «диких» магий, чтобы новые существа становились чумными и заклятыми, даже спустя столько времени после начала Чумы Заклинаний, и чтобы сотворяли заклинания или высвобождали магии, способствующие хаосу, всё ещё пульсирующему в Плетении после того катаклизма.
 
-Поэтому некоторые известные миссии Нурлрета включали в себя поиск и уничтожение или повреждение якорей Плетения, как живых людей, так и статичных артефактов или узлов магической силы (лесные поляны, перекрестки врат/порталов или узлы в подземном мраке, где сильны фаэсрессы). Чаще всего они сосредоточены на атаке существующих защитных заклинаний, мифалов и сетей заклинаний, чтобы они вели себя нестабильно, а затем усиливают хаос, сотворяя определенные заклинания в определенных местах или способах, и/или устанавливая зачарованные предметы в качестве источников топлива для продолжающихся эффектов дикой магии, чтобы распространить хаос в Плетениях и по всему ландшафту Торила.
+Поэтому некоторые известные миссии Нурлрета включали в себя поиск и уничтожение или повреждение якорей Плетения, как живых людей, так и статичных артефактов или узлов магической силы (лесные поляны, перекрестки врат/порталов или узлы в подземном мраке, где сильны фаэсрессы). Чаще всего они сосредоточены на атаке существующих защитных заклинаний, мифалов и сетей заклинаний, чтобы они вели себя нестабильно, а затем усиливают хаос, сотворяя определённые заклинания в определенных местах или способах, и/или устанавливая зачарованные предметы в качестве источников топлива для продолжающихся эффектов дикой магии, чтобы распространить хаос в Плетениях и по всему ландшафту Торила.
 
 В некоторых миссиях были даже целенаправленные убийства конкретных Волшебников или жрецов Мистры или Азута, хотя эти последние цели всегда вызывали яростный отпор со стороны служителей этих двух божеств, вплоть до экспедиций в логово Владык, чтобы уничтожить многих нурлретов.
 
